--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-    <title>React App</title>
+    <title>Food Recipe</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
